# Sentiment-Analysis-Model

./: IMDB Dataset.csv  MLmodel.ipynb  README.md  pyproject.toml
