[project]
name = "movie-review-sentiment-analyis"
version = "0.1.0"
description = "This project is about movie review sentiment analysis"
authors = [
    {name = "Surya Bezap",email = "suryabezap2702@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "tensorflow (>=2.19.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
